--- a/Frontend/src/Components/UserProfile/UserProfileMainPanel.css
+++ b/Frontend/src/Components/UserProfile/UserProfileMainPanel.css
@@ -93,7 +93,7 @@
 }
 
 .UPMainActivity{
-    margin-top: 20px;
+    margin-top: 1.25rem;
     backdrop-filter: blur(5px);
     background-color: rgba(255, 255, 255, 0.1);
     /* box-shadow: 0 0 7px 1px rgb(0, 0, 0); */
@@ -101,6 +101,7 @@
     border-left: 2px solid rgba(255, 255, 255, 0.5);
     border-radius: 25px;
     padding: 10px 20px;
+    padding-bottom: 3.5%;
 }
 
 .UPMainActivityInfo{
